--- a/Config/Config.properties
+++ b/Config/Config.properties
@@ -1,9 +1,10 @@
 #Application properties
 url=https://accounts.creatio.com/login/alm
-title= LOG IN TO YOUR ACCOUNT
+title=Log in | Creatio
+titl=Log in | studio creatio
 loginheader=LOG IN TO YOUR ACCOUNT
-businessText=Business email
-passwordText=Password
+businessText=BUSINESS EMAIL
+passwordText=PASSWORD
 loginButton= LOG IN
 FirstNameTextBox=FIRST NAME
 lastname= LAST NAME
@@ -13,3 +14,7 @@ country=COUNTRY
 phone=PHONE
 signup= SIGN UP
 
+#DB Properties
+db_url=jdbc:postgresql://localhost:5432/creatio
+db_user=postgres
+db_pass=admin
